k8s.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: dcsearch
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: dcsearch.pandawork.com
    http:
      paths:
      - path: /
        backend:
          serviceName: server
          servicePort: 80
  tls:
  - hosts:
    - dcsearch.pandawork.com
    secretName: web-tls
---
apiVersion: v1
kind: Service
metadata:
  name: es
  namespace: dcsearch
  labels:
    app: es
spec:
  selector:
    app: es
  ports:
  - protocol: TCP
    port: 9200
    targetPort: 9200
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: dcsearch
  labels:
    app: server
spec:
  selector:
    app: server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: es
  namespace: dcsearch
  labels:
    app: es
spec:
  # This must be 1.
  # Elasticsearch has its own mechanism of clustering
  replicas: 1
  selector:
    matchLabels:
      app: es
  template:
    metadata:
      labels:
        app: es
    spec:
      volumes:
      - name: es-data
        persistentVolumeClaim:
          claimName: es-pv
      containers:
      - name: es
        image: quay.io/louischan/elasticsearch-icu:0.1.0
        ports:
        - containerPort: 9200
        volumeMounts:
        - name: es-data
          mountPath: /usr/share/elasticsearch/data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: dcsearch
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: quay.io/louischan/dcsearch-server:0.1.0
        ports:
        - containerPort: 8000
